2.1.0
     * @nonodename, @patperry - fixed some compiler warnings
     * @yep, @emaste - documentation improvements
     * @sgravrock - build fix for NetBSD (and whenever sh != bash)
     * @rotty, @brimstone3, @lloyd - allow client to reset generator
     * @sgravrock - remove bash dependencies
     * @lloyd - add api tests
     * @rflynn - remove ruby dependency
     * @cloderic - nmake install works on windows
     * @shahbag - build fix for qnx
     * @breese - debugging improvements
     * @lloyd - json_verify supports -s flag for stream processing
     * @lloyd - json_reformat supports -s flag for stream processing

2.0.4
     * @jcekstrom - additional checking in integer parsing
     * @jcekstrom - fix a bug in yajl_tree that would cause valid json integersto fail to parse
     * @plaguemorin - fix a memory leak in yajl_tree (error strings were being leaked)
     * @7AC - reset errno
     * @ConradIrwin - include flags to reformatter to allow toggling of escape solidus option

2.0.3
     * John Stamp generation of a pkgconfig file at build time.
     * @robzuber bugfix in yajl_tree_get()
     * @lloyd - fix for compilation on 64 bit windows

2.0.2
     * lth fix typos in yajl_tree.h macros YAJL_IS_INTEGER and YAJL_IS_DOUBLE,
	contributed by Artem S Vybornov.
     * lth add #ifdef __cplusplus wrappers to yajl_tree to allow proper
	usage from many populer C++ compilers.

2.0.1
     * lth generator flag to allow client to specify they want
	escaped solidi '/'.  issue #28
     * lth crash fix when yajl_parse() is never called. issue #27

2.0.0
     * lth YAJL is now ISC licensed: http://en.wikipedia.org/wiki/ISC_license
     * lth 20-35% (osx and linux respectively) parsing performance
	improvement attained by tweaking string scanning (idea: @michaelrhanson).
     * Florian Forster & lth - yajl_tree interface introduced as a higher level
	interface to the parser (eats JSON, poops a memory representation)
     * lth require a C99 compiler