@@ -1,0 +1,26 @@
+#!/bin/bash
+
+# Common preparation script.
+
+. ./build.settings.sh
+
+# DIRS
+
+rm -rf ${BUILDDIR}
+
+mkdir -p ${BUILDDIR}
+mkdir -p ${BUILDDIR}/SOURCES
+mkdir -p ${BUILDDIR}/SPECS
+mkdir -p ${BUILDDIR}/RPMS
+mkdir -p ${BUILDDIR}/tmp
+
+# Common packs
+
+PACKS="cmake gcc redhat-rpm-config rpm-build git"
+sudo yum -y install ${PACKS}
+ER=$?
+if ! [ ${ER} -eq 0 ] ; then
+    echo "Cannot install packages ${PACKS}"
+    exit -1
+fi
+
